tests/snapshots/exit__exit_pretty.snap
---
source: tests/exit.rs
info:
  program: skribi
  args:
    - pretty
    - resources/test_programs/exit.skrb
---
success: true
exit_code: 0
----- stdout -----
File resources/test_programs/exit.skrb AST is:
DEPRECATED [skr_app should not be used]
exit()
exit()
exit()
exit()
exit()
(exit(a()))


----- stderr -----
