tests/snapshots/exit__fixed_exit_pretty.snap
---
source: tests/exit.rs
info:
  program: skribi
  args:
    - pretty
    - resources/test_programs/fixed_exit.skrb
---
success: true
exit_code: 0
----- stdout -----
File resources/test_programs/fixed_exit.skrb AST is:
DEPRECATED [skr_app should not be used]
exit()
exit()
exit()
exit()
DEPRECATED [skr_app should not be used]
exit()
exit()
DEPRECATED [skr_app should not be used]
DEPRECATED [skr_app should not be used]
exit()


----- stderr -----
