tests/snapshots/exit__fixed_perfect_build.snap
---
source: tests/exit.rs
info:
  program: skribi
  args:
    - build
    - resources/test_programs/perfect_exit.skrb
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
warning: overriding the module target triple with x86_64-unknown-linux-gnu [-Woverride-module]
1 warning generated.
